test/error/LexLiteralHexTrailingLetters.fu
public static class Test
{
	public static bool Run()
	{
		int i = 0xfoo; //ERROR: Invalid integer
		return true;
	}
}
